# scrap

./: .gitignore  Context.md  MAC_APP_PLAN.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
.github/workflows/: release.yml
app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
app/api/vibe/: route.ts
app/app/: page.tsx
app/landing/: opengraph-image.tsx  page.tsx
components/: AddCategory.tsx  AddInspiration.tsx  AttachVibe.tsx  CategoryColumn.tsx  DesktopUpdater.tsx  Doodles.tsx  Notes.tsx  TaskItem.tsx  ThemeProvider.tsx  TodoBoard.tsx  VibeShelf.tsx  VoiceRecorder.tsx  Workspace.tsx  icons.tsx
components/landing/: AppMockup.tsx  DownloadSection.tsx  Faq.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  KofiFloat.tsx  LandingShell.tsx  Nav.tsx  Problem.tsx  SupportKofi.tsx  TransformShowcase.tsx  VibeSwitcher.tsx
lib/: landingVibes.ts  pinterest.ts  platform.ts  site.ts  storage.ts  types.ts  useLocalState.ts  vibe-source.ts  vibe.ts
scripts/: desktop-export.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  vibe.rs
