[package]
name = "scrapable"
version = "0.1.1"
description = "Scrapable — a to-do + notes app that becomes your aesthetic"
authors = ["Jorge"]
edition = "2021"

[lib]
name = "scrapable_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Native HTTP — rustls (no OpenSSL), gzip; minimal feature set.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }
# Only the decoders we actually need, to keep the binary small.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
regex = "1"

# "As lightweight as possible" — size-optimized release build.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
